finalpractice/mysqlRollingUpd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  mysql-dp
  namespace: test
  labels:
    env: mysqltest
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: mysql-db
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      name: mysql
      labels:
        tier: mysql-db
    spec:
      containers: 
      - name: db
        image: mysql:8.0.21
        ports:
          - containerPort: 3306
