finalpractice/pythonapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  app-api
  namespace: test
  labels:
    env: apitest
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: appapi
  template:
    metadata:
      name: app
      labels:
        tier: appapi
    spec:
      containers: 
      - name: app
        image: pradovc01/restapipv
        ports:
          - containerPort: 5000
