finalpractice/mysqlservice.yaml
apiVersion: v1
kind: Service
metadata:
  name:  mysql-svc
  namespace: test
  labels:
    tier: mysql-db    
spec:
  type: ClusterIP
  selector:
    tier: mysql-db
  ports:
    - targetPort: 3306
      port: 3306
