finalpractice/pythonappservice.yaml
apiVersion: v1
kind: Service
metadata:
  name:  app-svc
  namespace: test
  labels:
    tier: appapi    
spec:
  type: ClusterIP
  selector:
    tier: appapi
  ports:
    - protocol: TCP 
      name: pythonapp
      targetPort: 5000
      port: 5000
